docs & fix: documentation and minor fixes
