# src/model/Usuario.js
@@ -12,14 +12,14 @@ const usuarioSchema = new mongoose.Schema({
             numero: { type: String, required: true},
             complemento: { type: String, required: false},
             cep: { type: String, required: true},
-            createdAt: { type: Date, requried: true, default: Date.now()}
+            createdAt: { type: Date, required: true, default: Date.now()}
         }
     ],
     createdAt: {type: Date, required: true, default: Date.now()},
     favoriteProducts: [
         {
             id: {type: mongoose.Schema.Types.ObjectId, unique: true, ref: 'produtos' },
-            createdAt: { type: Date, requried: true, default: Date.now()}
+            createdAt: { type: Date, required: true, default: Date.now()}
         }
     ],
     admin: {type: Boolean, required: true, default: false}
